--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <body>
         <h1>This is heading element</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam temporibus delectus aperiam harum magnam eius expedita quas molestiae ratione ea, voluptatem veniam similique beatae incidunt enim exercitationem id modi accusamus!</p>
     </body>
 
 </html>
